--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: auth_code_view
 description: A new Flutter package project.
-version: 0.0.1
-homepage: null
+version: 0.0.2
+homepage: www.tat.dev
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
